# pyopencl

./: .conda-ci-build-configure.sh  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .pylintrc-local.yml  .test-conda-env-py2.yml  .test-conda-env-py3.yml  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.rst  TODOs  _cffi.py  aksetup_helper.py  azure-pipelines.yml  cffi_build.py.in  cl_gl_types.h  cl_types.h  configure.py  pyproject.toml  pytest.ini  run-mypy.sh  run-pylint.sh  setup.cfg  setup.py  siteconf.cmake
.basedpyright/: baseline.json
.ci/: hack-intel-cl-into-conda-env.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  github-deploy.yml  wheels.yml
contrib/: cldis.py  pyopencl.vim
contrib/fortran-to-opencl/: README  setup.cfg  translate.py
doc/: Makefile  algorithm.rst  array.rst  conf.py  howto.rst  index.rst  make_constants.py  misc.rst  runtime.rst  runtime_const.rst  runtime_gl.rst  runtime_memory.rst  runtime_platform.rst  runtime_program.rst  runtime_queue.rst  subst.rst  tools.rst  types.rst  upload-docs.sh
doc/source/: .gitignore  algorithm.rst  array.rst  conf.py  constants.inc  index.rst  misc.rst  reference.rst  runtime.rst  subst.rst  tools.rst
examples/: NBody.py  PiXPU.py  TrouNoir.py  benchmark-all.py  benchmark.py  black-hole-accretion.py  demo-struct-reduce.py  demo.py  demo_array.py  demo_array_svm.py  demo_elementwise.py  demo_elementwise_complex.py  demo_flops.py  demo_mandelbrot.py  demo_meta_codepy.py  demo_meta_template.py  download-examples-from-wiki.py  dump-performance.py  dump-properties.py  gl_interop_demo.py  gl_particle_animation.py  image_filters_using_image2d_t.py  ipython-demo.ipynb  matrix-multiply.py  median-filter.py  n-body.py  narray.py  pi-monte-carlo.py  print-binary.py  svm.py  transpose.py
experiments/: print-binary.py
pyopencl/: __init__.py  _buffers.py  _cffi.py  _cl.pyi  _cluda.py  _init.py  _monkeypatch.py  _mymako.py  _pvt_struct.py  algorithm.py  array.py  bitonic_sort.py  bitonic_sort_templates.py  cache.py  capture_call.py  cffi_cl.py  characterize.py  check_concurrency.py  clmath.py  clrandom.py  cltypes.py  dtypes.py  elementwise.py  filelock.py  invoker.py  ipython_ext.py  mempool.py  np.py  reduction.py  scan.py  tools.py  typing.py  version.py
pyopencl/c_wrapper/: wrap_cl_core.h  wrap_cl_gl_core.h
pyopencl/characterize/: __init__.py  performance.py
pyopencl/cl/: pyopencl-bessel-j-complex.cl  pyopencl-bessel-j.cl  pyopencl-complex.h  pyopencl-eval-tbl.cl  pyopencl-hankel-complex.cl  pyopencl-ranluxcl.cl
pyopencl/cl/pyopencl-random123/: array.h  openclfeatures.h  philox.cl  threefry.cl
scripts/: build-ocl-macos.sh  build-ocl-windows.sh  build-ocl.sh  build-wheels.sh  fix-wheel.py  prepare-build-wheels.sh  print-binary.py
src/: bitlog.cpp  bitlog.hpp  clinfo_ext.h  mempool.hpp  numpy_init.hpp  pyopencl_ext.h  tools.hpp  wrap_cl.cpp  wrap_cl.hpp  wrap_cl_part_1.cpp  wrap_cl_part_2.cpp  wrap_constants.cpp  wrap_helpers.hpp  wrap_mempool.cpp
src/c_wrapper/: Makefile  async.cpp  async.h  bitlog.cpp  bitlog.h  bitlog.hpp  buffer.cpp  buffer.h  clhelper.h  clinfo_ext.h  clobj.h  command_queue.cpp  command_queue.h  context.cpp  context.h  debug.cpp  debug.h  device.cpp  device.h  error.h  event.cpp  event.h  function.h  gl_obj.cpp  gl_obj.h  image.cpp  image.h  kernel.cpp  kernel.h  memory_map.cpp  memory_map.h  memory_object.cpp  memory_object.h  platform.cpp  platform.h  program.cpp  program.h  pyhelper.cpp  pyhelper.h  pyopencl_ext.h  (+11 more)
src/cl/: pyopencl-airy.cl  pyopencl-airy.h  pyopencl-bessel-j.cl  pyopencl-bessel-j.h  pyopencl-bessel-y.cl  pyopencl-cephes.cl  pyopencl-cephes.h  pyopencl-complex.h  pyopencl-ranluxcl.cl
src/cl/CL/: cl.h  cl_platform.h
src/cpp/: cl.hpp
src/wrapper/: _pvt_struct_v2.cpp  mempool.hpp  numpy_init.hpp  wrap_cl.cpp  wrap_cl.hpp  wrap_cl_part_1.cpp  wrap_cl_part_2.cpp  wrap_constants.cpp  wrap_helpers.hpp  wrap_mempool.cpp
stubgen/: stubgen.py
test/: add-vectors-32.spv  add-vectors-64.spv  empty-header.h  test_algorithm.py  test_array.py  test_arrays_in_structs.py  test_clmath.py  test_clrandom.py  test_enqueue_copy.py  test_math.py  test_wrapper.py
travis/: build-wheels.sh
